Update UI and style files Fixed responsivity on mobile using positioning techniques

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ body {
 }
 
 .container {
+	position: relative;
 	width: 300px;
 	height: 550px;
 	padding-right: 20px;
@@ -40,8 +41,8 @@ body {
 
 .nftHover {
 	position: absolute;
-	top: 200px;
-	left: 538px;
+	top: 25px;
+	left: 25px;
 	width: 270px;
 	height: 270px;
 	border: 1px hidden;
